implementazione ciclo for in

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <div id="list">
+
+        </div>
+    </main>
     
     <script src="./js/script.js"></script>
 </body>
