Bonus 1: implementazione ciclo for per aggiungere le immagini in pagina

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <main>
         <div id="list">
 
+            <div id="photos">
+                
+            </div>
         </div>
     </main>
     
