--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
 </head>
 <body>
     <main>
-        <div id="list">
-
-            <div id="photos">
-                
-            </div>
-        </div>
+        <section id="output">
+        </section>
     </main>
     
     <script src="./js/script.js"></script>
